--- a/index.html
+++ b/index.html
@@ -622,6 +622,10 @@
                 [2.5, -170, 50],
                 [2.5, -170, -60],
 
+                [1, 0, 0],
+                [1, 0, 0],
+                [1, 0, 0],
+                [1, 0, 0],
                 [1, 0, 0]
               ].map(([s, x, y]) => `scale(${s}) translate(${x}px, ${y}px)`)
 
@@ -637,6 +641,10 @@
                 130,
                 130,
                 277,
+                0,
+                0,
+                0,
+                0,
                 0
               ].map(y => `translate(0px, ${y}px)`)
 
@@ -1071,7 +1079,7 @@
           </script>
           <h1 style="align-self: flex-start;">Bereitstellung</h1>
           <div
-            style="align-self: stretch; overflow:hidden; : calc(100% - 0.5em);"
+            style="align-self: stretch; overflow:hidden; height: calc(100% - 0.5em);"
           >
             <include src="./mastercss/deployment_h.css"></include>
             <include src="./img/deployment_h.svg"></include>
